# CarMoto

./: .env  django  pyproject.toml  services.py
config/: settings.py  urls.py
data/: alldata.json  users_data.json  vehicle_data.json
users/: admin.py
users/migrations/: 0001_initial.py
vehicle/: models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
vehicle/migrations/: 0001_initial.py  0002_moto.py  0003_mileage.py  0004_car_owner_moto_owner_alter_mileage_car_and_more.py  0005_car_amount.py  0006_car_price_moto_price.py
